force-app/main/default/objects/Relief_Valve__c/Relief_Valve__c.object-meta.xml
<CustomObject>
    <description>Relief valves custom object</description>
    <label>Relief Valve</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Relief Valve Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Valves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>