force-app/main/default/objects/Relief_Valve__c/fields/ASSYPARTNO__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTNO__c</fullName>
    <label>ASSYPARTNO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>