force-app/main/default/objects/Relief_Valve__c/fields/Atex_bkend__c.field-meta.xml
<CustomField>
    <fullName>Atex_bkend__c</fullName>
    <formula>IF( Atex_Certificate__c = true, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atex bkend</label>
    <type>Text</type>
</CustomField>