force-app/main/default/objects/Relief_Valve__c/fields/Atex_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Atex_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atex Certificate 2014/34/EU</label>
    <type>Checkbox</type>
</CustomField>