force-app/main/default/objects/Relief_Valve__c/fields/Atmospheric_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Atmospheric_Pressure_Units__c</fullName>
    <label>Atmospheric Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psia</fullName>
            </value>
            <value>
                <fullName>atm abs.</fullName>
            </value>
            <value>
                <fullName>kPa abs.</fullName>
            </value>
            <value>
                <fullName>bar abs.</fullName>
            </value>
            <value>
                <fullName>kgf/cm2 abs.</fullName>
            </value>
            <value>
                <fullName>mbar abs.</fullName>
            </value>
            <value>
                <fullName>MPa abs.</fullName>
            </value>
            <value>
                <fullName>Pa abs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>