force-app/main/default/objects/Relief_Valve__c/fields/Back_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Back_Pressure_Units__c</fullName>
    <label>Back Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>