force-app/main/default/objects/Relief_Valve__c/fields/Body_Coating_Material__c.field-meta.xml
<CustomField>
    <fullName>Body_Coating_Material__c</fullName>
    <label>Body Coating Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>