force-app/main/default/objects/Relief_Valve__c/fields/Body_Design__c.field-meta.xml
<CustomField>
    <fullName>Body_Design__c</fullName>
    <label>Body Design</label>
    <length>50</length>
    <type>Text</type>
</CustomField>