force-app/main/default/objects/Relief_Valve__c/fields/Build_Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>Build_Cost_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build Cost Override</label>
    <type>Checkbox</type>
</CustomField>