force-app/main/default/objects/Relief_Valve__c/fields/Charpy_Impact_Testing__c.field-meta.xml
<CustomField>
    <fullName>Charpy_Impact_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charpy Impact Testing</label>
    <type>Checkbox</type>
</CustomField>