force-app/main/default/objects/Relief_Valve__c/fields/Constraint_Product_Selection_By_Flow__c.field-meta.xml
<CustomField>
    <fullName>Constraint_Product_Selection_By_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Product Selection by Flow</label>
    <type>Checkbox</type>
</CustomField>