force-app/main/default/objects/Relief_Valve__c/fields/Converted_Max_Process_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Converted_Max_Process_Pressure__c</fullName>
    <label>Converted Max Process Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>