force-app/main/default/objects/Relief_Valve__c/fields/Converted_Pressure_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Converted_Pressure_Relieving_Temperature__c</fullName>
    <label>Converted Pressure Relieving Temperature</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>