force-app/main/default/objects/Relief_Valve__c/fields/Converted_Relieving_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Converted_Relieving_Pressure_Value__c</fullName>
    <label>Converted Relieving Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>