force-app/main/default/objects/Relief_Valve__c/fields/Converted_Vacuum_Relief_Req_Flow__c.field-meta.xml
<CustomField>
    <fullName>Converted_Vacuum_Relief_Req_Flow__c</fullName>
    <label>Converted Vacuum Relief Req Flow</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>