force-app/main/default/objects/Relief_Valve__c/fields/CUTR_bkend__c.field-meta.xml
<CustomField>
    <fullName>CUTR_bkend__c</fullName>
    <formula>IF( CU_TR__c = true, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUTR bkend</label>
    <type>Text</type>
</CustomField>