force-app/main/default/objects/Relief_Valve__c/fields/Diaphragm_Material__c.field-meta.xml
<CustomField>
    <fullName>Diaphragm_Material__c</fullName>
    <label>Diaphragm Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>