force-app/main/default/objects/Relief_Valve__c/fields/Discountable_Price__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Price__c</fullName>
    <label>Discountable Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>