force-app/main/default/objects/Relief_Valve__c/fields/Dummy_Atex__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Atex__c</fullName>
    <label>Dummy Atex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>