force-app/main/default/objects/Relief_Valve__c/fields/Dummy_CUTR__c.field-meta.xml
<CustomField>
    <fullName>Dummy_CUTR__c</fullName>
    <label>Dummy_CUTR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>