force-app/main/default/objects/Relief_Valve__c/fields/Dummy_PED__c.field-meta.xml
<CustomField>
    <fullName>Dummy_PED__c</fullName>
    <label>Dummy PED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>