force-app/main/default/objects/Relief_Valve__c/fields/EffMBP__c.field-meta.xml
<CustomField>
    <fullName>EffMBP__c</fullName>
    <label>EffMBP</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>