force-app/main/default/objects/Relief_Valve__c/fields/EFFMop__c.field-meta.xml
<CustomField>
    <fullName>EFFMop__c</fullName>
    <label>EFFMop</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>