force-app/main/default/objects/Relief_Valve__c/fields/Element_Material_Flag__c.field-meta.xml
<CustomField>
    <fullName>Element_Material_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Element Material Flag</label>
    <type>Checkbox</type>
</CustomField>