force-app/main/default/objects/Relief_Valve__c/fields/Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Notes__c</fullName>
    <label>Engineering Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>