force-app/main/default/objects/Relief_Valve__c/fields/Enter_Relieving_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Enter_Relieving_Pressure_Units__c</fullName>
    <label>Relieving Pressure Value UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>