force-app/main/default/objects/Relief_Valve__c/fields/Enter_Relieving_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Enter_Relieving_Pressure_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter either the relieving pressure or %overpressure. The % overpressure field is available after entering 0 for the relieving pressure, and is overridden if the relieving pressure is changed to a non-zero value</inlineHelpText>
    <label>Relieving Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>