force-app/main/default/objects/Relief_Valve__c/fields/Fastener_Material__c.field-meta.xml
<CustomField>
    <fullName>Fastener_Material__c</fullName>
    <label>Fastener Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>