force-app/main/default/objects/Relief_Valve__c/fields/Field_Test_Connection__c.field-meta.xml
<CustomField>
    <fullName>Field_Test_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Test Connection</label>
    <type>Checkbox</type>
</CustomField>