force-app/main/default/objects/Relief_Valve__c/fields/Field_Test_Connection_Backend__c.field-meta.xml
<CustomField>
    <fullName>Field_Test_Connection_Backend__c</fullName>
    <formula>IF(Field_Test_Connection__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Test Connection Backend</label>
    <type>Text</type>
</CustomField>