force-app/main/default/objects/Relief_Valve__c/fields/Fillet_Weld_Liquid_Dye_Penetrant_Backend__c.field-meta.xml
<CustomField>
    <fullName>Fillet_Weld_Liquid_Dye_Penetrant_Backend__c</fullName>
    <formula>IF(Fillet_Weld_Liquid_Dye_Penetrant__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fillet Weld Liquid Dye Penetrant Backend</label>
    <type>Text</type>
</CustomField>