force-app/main/default/objects/Relief_Valve__c/fields/Finish_Configuration_Flag__c.field-meta.xml
<CustomField>
    <fullName>Finish_Configuration_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finish Configuration Flag</label>
    <type>Checkbox</type>
</CustomField>