force-app/main/default/objects/Relief_Valve__c/fields/Flame_Arrester_Flag__c.field-meta.xml
<CustomField>
    <fullName>Flame_Arrester_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flame Arrester Flag</label>
    <type>Checkbox</type>
</CustomField>