force-app/main/default/objects/Relief_Valve__c/fields/Flame_Arrester_Option__c.field-meta.xml
<CustomField>
    <fullName>Flame_Arrester_Option__c</fullName>
    <label>Flame Arrester Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>