force-app/main/default/objects/Relief_Valve__c/fields/Flow_Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Flow_Rate_Units__c</fullName>
    <label>Flow Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flow_Rate_Units</valueSetName>
    </valueSet>
</CustomField>