force-app/main/default/objects/Relief_Valve__c/fields/Gas_Group__c.field-meta.xml
<CustomField>
    <fullName>Gas_Group__c</fullName>
    <inlineHelpText>Equipment certified for use in explosive gas atmospheres is classified according to the nature of the potentially explosive atmosphere for which it is intended.  This equipment is classified according to the explosion gas groups IIA, IIB and IIC.</inlineHelpText>
    <label>Gas Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>IIA</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>IIB</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>IIC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>