force-app/main/default/objects/Relief_Valve__c/fields/Gas_List__c.field-meta.xml
<CustomField>
    <fullName>Gas_List__c</fullName>
    <label>Gas List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>