force-app/main/default/objects/Relief_Valve__c/fields/Intergranular_Corossion_Test__c.field-meta.xml
<CustomField>
    <fullName>Intergranular_Corossion_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intergranular Corrosion Test</label>
    <type>Checkbox</type>
</CustomField>