force-app/main/default/objects/Relief_Valve__c/fields/Is_flame_arrester_needed_with_your_valve__c.field-meta.xml
<CustomField>
    <fullName>Is_flame_arrester_needed_with_your_valve__c</fullName>
    <label>Include flame arrester?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Valves with flame arresters</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Valves without flame arresters</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>