force-app/main/default/objects/Relief_Valve__c/fields/Manual_Blowdown__c.field-meta.xml
<CustomField>
    <fullName>Manual_Blowdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Blowdown</label>
    <type>Checkbox</type>
</CustomField>