force-app/main/default/objects/Relief_Valve__c/fields/Manual_Blowdown_Backend__c.field-meta.xml
<CustomField>
    <fullName>Manual_Blowdown_Backend__c</fullName>
    <formula>IF(Manual_Blowdown__c = true,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Blowdown Backend</label>
    <type>Text</type>
</CustomField>