force-app/main/default/objects/Relief_Valve__c/fields/Material_Sourcing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Material_Sourcing_Requirements__c</fullName>
    <label>Material Sourcing Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>No Restrictions (Default)</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes, Details Attached to Quote</label>
            </value>
            <value>
                <fullName>0N</fullName>
                <isActive>false</isActive>
                <label>No Materials from India or China</label>
            </value>
            <value>
                <fullName>US</fullName>
                <isActive>false</isActive>
                <label>Source All Materials from USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>