force-app/main/default/objects/Relief_Valve__c/fields/Max_Process_Pressure_Unit__c.field-meta.xml
<CustomField>
    <fullName>Max_Process_Pressure_Unit__c</fullName>
    <label>Max Process Pressure Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>