force-app/main/default/objects/Relief_Valve__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specified</fullName>
            </value>
            <value>
                <fullName>Acetone</fullName>
            </value>
            <value>
                <fullName>Acetylene</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Benzene</fullName>
            </value>
            <value>
                <fullName>Butadiene-1.2</fullName>
            </value>
            <value>
                <fullName>Butadiene-1.3</fullName>
            </value>
            <value>
                <fullName>Butane-n</fullName>
            </value>
            <value>
                <fullName>Butene-1</fullName>
            </value>
            <value>
                <fullName>Carbon Dioxide</fullName>
            </value>
            <value>
                <fullName>Carbon Monoxide</fullName>
            </value>
            <value>
                <fullName>Chlorine</fullName>
            </value>
            <value>
                <fullName>Cyclohexane</fullName>
            </value>
            <value>
                <fullName>Decane-n</fullName>
            </value>
            <value>
                <fullName>Dimethyl Ether</fullName>
            </value>
            <value>
                <fullName>Dowtherm A</fullName>
            </value>
            <value>
                <fullName>Dowtherm E</fullName>
            </value>
            <value>
                <fullName>Ethane</fullName>
            </value>
            <value>
                <fullName>Ethyl alcohol</fullName>
            </value>
            <value>
                <fullName>Ethylene</fullName>
            </value>
            <value>
                <fullName>Ethylene Glicol</fullName>
            </value>
            <value>
                <fullName>Glycerin</fullName>
            </value>
            <value>
                <fullName>H2 Chloride</fullName>
            </value>
            <value>
                <fullName>H2 Sulfide</fullName>
            </value>
            <value>
                <fullName>Hexane-n</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Isobutane</fullName>
            </value>
            <value>
                <fullName>Isoprene</fullName>
            </value>
            <value>
                <fullName>Methane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>