force-app/main/default/objects/Relief_Valve__c/fields/Method21_Leak_Detection_Backend__c.field-meta.xml
<CustomField>
    <fullName>Method21_Leak_Detection_Backend__c</fullName>
    <formula>IF(Method21_Leak_Detection__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Method21 Leak Detection Backend</label>
    <type>Text</type>
</CustomField>