force-app/main/default/objects/Relief_Valve__c/fields/Model_name__c.field-meta.xml
<CustomField>
    <fullName>Model_name__c</fullName>
    <label>Model name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>