force-app/main/default/objects/Relief_Valve__c/fields/Molecular_Weight__c.field-meta.xml
<CustomField>
    <fullName>Molecular_Weight__c</fullName>
    <label>Molecular Weight</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>