force-app/main/default/objects/Relief_Valve__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACE MR0175/ISO 15156</label>
    <type>Checkbox</type>
</CustomField>