force-app/main/default/objects/Relief_Valve__c/fields/OB050__c.field-meta.xml
<CustomField>
    <fullName>OB050__c</fullName>
    <label>OB050</label>
    <length>255</length>
    <type>Text</type>
</CustomField>