force-app/main/default/objects/Relief_Valve__c/fields/Overpressure__c.field-meta.xml
<CustomField>
    <fullName>Overpressure__c</fullName>
    <inlineHelpText>Enter either the relieving pressure or %overpressure. The % overpressure field is available after entering 0 for the relieving pressure, and is overridden if the relieving pressure is changed to a non-zero value</inlineHelpText>
    <label>% Overpressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>