force-app/main/default/objects/Relief_Valve__c/fields/OW050__c.field-meta.xml
<CustomField>
    <fullName>OW050__c</fullName>
    <label>OW050</label>
    <length>255</length>
    <type>Text</type>
</CustomField>