force-app/main/default/objects/Relief_Valve__c/fields/OW070__c.field-meta.xml
<CustomField>
    <fullName>OW070__c</fullName>
    <label>OW070</label>
    <length>255</length>
    <type>Text</type>
</CustomField>