force-app/main/default/objects/Relief_Valve__c/fields/OW071__c.field-meta.xml
<CustomField>
    <fullName>OW071__c</fullName>
    <label>OW071</label>
    <length>255</length>
    <type>Text</type>
</CustomField>