force-app/main/default/objects/Relief_Valve__c/fields/Painting_Coating_Option__c.field-meta.xml
<CustomField>
    <fullName>Painting_Coating_Option__c</fullName>
    <label>Painting/Coating Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>