force-app/main/default/objects/Relief_Valve__c/fields/Pallet_Fastener_Coating_Material__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Fastener_Coating_Material__c</fullName>
    <label>Pallet/Fastener Coating Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>