force-app/main/default/objects/Relief_Valve__c/fields/Pallet_Type__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Type__c</fullName>
    <label>Pallet Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>