force-app/main/default/objects/Relief_Valve__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>ASSYPARTEXISTING</label>
    <length>200</length>
    <type>Text</type>
</CustomField>