force-app/main/default/objects/Relief_Valve__c/fields/Part_Number_Base__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Base__c</fullName>
    <label>ASSYPARTNOBASE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>