force-app/main/default/objects/Relief_Valve__c/fields/PC020__c.field-meta.xml
<CustomField>
    <fullName>PC020__c</fullName>
    <label>PC020</label>
    <length>255</length>
    <type>Text</type>
</CustomField>