force-app/main/default/objects/Relief_Valve__c/fields/PC045__c.field-meta.xml
<CustomField>
    <fullName>PC045__c</fullName>
    <label>PC045</label>
    <length>255</length>
    <type>Text</type>
</CustomField>