force-app/main/default/objects/Relief_Valve__c/fields/PC050__c.field-meta.xml
<CustomField>
    <fullName>PC050__c</fullName>
    <label>PC050</label>
    <length>255</length>
    <type>Text</type>
</CustomField>