force-app/main/default/objects/Relief_Valve__c/fields/PED_bkend__c.field-meta.xml
<CustomField>
    <fullName>PED_bkend__c</fullName>
    <formula>IF( PED_2014_68_EU_CE_mark__c = true, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PED bkend</label>
    <type>Text</type>
</CustomField>