force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Action__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Action__c</fullName>
    <label>Pilot Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>