force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Action_Flag__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Action_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Action Flag</label>
    <type>Checkbox</type>
</CustomField>