force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Exhaust_Piped_to_Discharge_Header__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Exhaust_Piped_to_Discharge_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Exhaust Piped to Discharge Header</label>
    <type>Checkbox</type>
</CustomField>