force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Soft_Goods_Material__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Soft_Goods_Material__c</fullName>
    <label>Pilot Soft Goods Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>